--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -30,11 +30,12 @@ jobs:
         run: echo Hello, world!
 
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Run
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
 
       - name: message steve
+        dependson: [ "Run" ]
         run: |
           echo catch up later !!!.
